--- a/test/fixtures/chapters.yml
+++ b/test/fixtures/chapters.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyText
+ch1_of_kh1:
+  name: "1"
+  khatma: kh1
 
-two:
-  name: MyText
+ch2_of_kh2:
+  name: "2"
+  khatma: kh22
